# d-note

./: Cargo.toml  README.md
scripts/: dnote
src/: main.rs
